--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@popperjs/core": "^2.6.0",
+    "bootstrap": "^5.0.0-beta1",
     "core-js": "^3.6.5",
     "handlebars": "^4.7.6"
   }
